# archive

./: .gitignore  .gitmodules  Makefile  README.md  defer.h
benchmarks/utf8/: .clangd  CMakeLists.txt  bench_Favx2_Slookup4_EeC.c  bench_Favx2_Slookup4v_EeC.c  bench_Favx2_Sscalar_EeC.c  bench_Favx2_Sutf8d_EeC.c  bench_Favx512_Sscalar_EeC.c  bench_Fmemcpy_Sscalar_R.c  bench_Forig_Sscalar_R.c  bench_Fscalar_Slookup4v_EeCA.c  bench_Fscalar_Sutf8d_EeC.c  bench_Fscalar_Sutf8d_EeCA.c  bench_Fsingle_Sscalar_R.c  bench_Fsse2_Sscalar_EeC.c  bench_Fsse2_Sscalar_EeR.c  bench_Fsse41_Sscalar_EeC.c  bench_Slookup4v.c  bench_avx2_lookup4.c  bench_avx2_utf8d.c  bench_early_exit.c  bench_early_exit_continue.c  bench_eec_orig.c  bench_fast_avx2_continue.c  bench_fast_scalar_utf8d.c  bench_fast_simd4_continue.c  bench_fast_simd_continue.c  bench_fast_simd_restart.c  bench_orig.c  bench_pre_orig_memcpy.c  bench_pre_orig_single.c  bench_scalar_EeC.c  bench_scalar_EeCA.c  bench_scalar_EeC_aligned.c  bench_scalar_EeR.c  bench_utf8.cpp  bench_utf8_harness.hpp  bench_utf8_one_Favx2_Slookup4_EeC.cpp  bench_utf8_one_Favx2_Slookup4v_EeC.cpp  bench_utf8_one_Favx2_Sscalar_EeC.cpp  bench_utf8_one_Favx2_Sutf8d_EeC.cpp  (+57 more)
benchmarks/utf8/shim/: shim_Favx2_Slookup4_EeC.c  shim_Favx2_Slookup4v_EeC.c  shim_Favx2_Sscalar_EeC.c  shim_Favx2_Sutf8d_EeC.c  shim_Favx512_Sscalar_EeC.c  shim_Fmemcpy_Sscalar_R.c  shim_Forig_Sscalar_R.c  shim_Fscalar_Slookup4v_EeCA.c  shim_Fscalar_Sutf8d_EeC.c  shim_Fscalar_Sutf8d_EeCA.c  shim_Fsingle_Sscalar_R.c  shim_Fsse2_Sscalar_EeC.c  shim_Fsse2_Sscalar_EeR.c  shim_Fsse41_Sscalar_EeC.c  shim_Slookup4v.c  shim_Sscalar.c  shim_early_exit.c  shim_early_exit_continue.c  shim_early_exit_continue_haswell.c  shim_eec_orig.c  shim_fast_avx2_continue.c  shim_fast_avx2_lookup4.c  shim_fast_avx2_utf8d.c  shim_fast_scalar_utf8d.c  shim_fast_simd4_continue.c  shim_fast_simd_continue.c  shim_fast_simd_restart.c  shim_orig.c  shim_pre_memcpy.c  shim_pre_single.c  shim_scalar_EeC.c  shim_scalar_EeCA.c  shim_scalar_EeC_aligned.c  shim_scalar_EeC_haswell.c  shim_scalar_EeR.c  shim_scalar_slow.c
benchmarks/utf8/test/: utf8_lookup4_slow_test.cc
misc/: defer.h
